<resources>
    <string name="app_name" translatable="false">Travelogue</string>
    <string name="start_btn">Start</string>
    <string name="no_account_textview">Did not have an account?</string>
    <string name="create_account_btn">Create an account</string>
    <string name="login_textview">Log to your Travelogue account</string>
    <string name="email_text_hint">Your e-mail address</string>
    <string name="password_text_hint">Your password</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_textview">Sign up to Travelogue</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="sign_up_success_toast">Successful account creation!</string>
    <string name="log_in_success_toast">Log in succeded!</string>
    <string name="log_in_fail_toast">Log in failed</string>
    <string name="sign_up_fail_toast">Account creation failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_text">In progress</string>
    <string name="travels_text">Previous travels</string>
    <string name="settings_text">Settings</string>
    <string name="log_out_btn_settings">Log out</string>
    <string name="forgot_password_textview">Forgot your password?</string>
    <string name="forgot_password_header_textview">Reset your password</string>
    <string name="forgot_password_btn">Reset</string>
    <string name="forgot_password_success">Password successfully reset, please see the email you received</string>
    <string name="forgot_password_failed">An error occured</string>
    <string name="no_travel_home_textview">No current travel</string>
    <string name="no_travel_start_btn">Start a new travel</string>
    <string name="create_new_travel">Create a new travel</string>
    <string name="activity_new_travel_text_view">Enter a travel name</string>
    <string name="activity_new_travel_edit_text_hint">A walk in Paris</string>
    <string name="btn_save">Save</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="back">Back</string>
    <string name="travel">Travel :</string>
    <string name="start_of_the_travel">Start of the travel:</string>
    <string name="end_of_the_travel">End of the travel :</string>
    <string name="no_travels_textview">No previous travel recorded</string>
    <string name="stop_travel_btn">Stop travel</string>
    <string name="forgot_password_activity_textview_1">Reset your password</string>
    <string name="forgot_password_activity_textview_2">for your Travelogue account</string>
    <string name="login_activity_textview_1">Log in</string>
    <string name="login_activity_textview_2">to your Travelogue account</string>
    <string name="sign_up_activity_textview_1">Sign up</string>
    <string name="sign_up_activity_textview_2">to create your Travelogue account</string>
    <string name="new_travel_activity_text_view_1">Start tracking a new travel</string>
    <string name="new_travel_activity_text_view_2">with Travelogue</string>
    <string name="sign_up_activity_text_view_2">to create your Travelogue account</string>
    <string name="welcome_activity_next_button">Next</string>
    <string name="welcome_activity_skip_button">Skip</string>
    <string name="travels_fragment_text_view_1">It is completely empty…</string>
    <string name="travels_fragment_text_view_2">You will find your previous completed travels here</string>
    <string name="welcome_slide_1_text_view_1">Welcome to Travelogue</string>
    <string name="welcome_slide_1_text_view_2">your new way to keep track of your travels</string>
    <string name="welcome_slide_2_text_view_1">Keep GPS track of your travels</string>
    <string name="welcome_slide_2_text_view_2">with automatic or on-demand recording</string>
    <string name="welcome_slide_3_text_view_1">Share GPS points of your travel</string>
    <string name="welcome_slide_3_text_view_2">in GPX or KML format</string>
    <string name="welcome_slide_4_text_view_1">Take photos that can be located</string>
    <string name="welcome_slide_4_text_view_2">with a GPS point in the map and automatically saved to your Google Photos account</string>
    <string name="welcome_slide_5_text_view_1">Your data synchronised and protected</string>
    <string name="welcome_slide_5_text_view_2">in the cloud with your Travelogue account</string>
    <string name="login_activity_title">Connection</string>
    <string name="sign_up_activity_title">Registration</string>
    <string name="forgot_password_activity_title">Forgotten password</string>
    <string name="travel_adapter_view">View</string>
    <string name="home_fragment_text_view_1">Set off on a new adventure</string>
    <string name="home_fragment_text_view_2">by starting a new travel with Travelogue</string>
    <string name="no_connection_activity_textview_1">No Internet connection</string>
    <string name="no_connection_activity_textview_2">Travelogue is a cloud application and requires an internet connection\nDon\'t worry, we will reconnect you when the connection is restored</string>
    <string name="require_location_permission">Please grant permission to access the location</string>
    <string name="sign_in_with_google_button_text">Continue with Google</string>
    <string name="sign_up_with_google_button_text">Sign up with Google</string>
    <string name="server_client_id" translatable="false">251810910551-pdrila58l9hncv6asvl9n2p182eehgka.apps.googleusercontent.com</string>
    <string name="time_between_each_gps_point_save">Time between two GPS point save (in minutes)</string>
    <string name="travel_information_icon_title">Information</string>
    <string name="travel_share_icon_title">Share</string>
    <string name="travel_add_icon_title">Add</string>
    <string name="travel_stop_icon_title">Stop</string>
    <string name="travelogue_service_name">Travelogue Location service</string>
    <string name="travelogue_service_running">Running</string>
    <string name="background_location_permission_alert_title">Background location permission needed</string>
    <string name="background_location_permission_alert_desc">This app requires the Background Location permission to do its job. \nPlease grant this permission in app settings by selecting \"Allow all the time\".</string>
    <string name="background_location_permission_alert_open_settings">Open settings</string>
    <string name="gps_point">GPS point</string>
    <string name="text_gps_point">GPS text point</string>
    <string name="image_gps_point">Image GPS point</string>
    <string name="longitude">longitude:</string>
    <string name="latitude">latitude:</string>
    <string name="topbar_travel_fragment">Search</string>
    <string name="topbar_travel_information">Information</string>
    <string name="topbar_travel_share">Share</string>
    <string name="topbar_travel_delete">Delete</string>
    <string name="alert_not_all_permissions_granted_title">Some permissions are required</string>
    <string name="alert_not_all_permissions_granted_desc">For Travelogue to work properly, some permissions must be granted.</string>
    <string name="info_name_travel">"Name of the travel: "</string>
    <string name="info_start_time_travel">"Start time: "</string>
    <string name="info_travel_title">Information about this trip</string>
    <string name="alert_share_title">Share as</string>
    <string name="sharing_gps_data">Sharing of GPS data</string>
    <string name="error_occured">An error occured...</string>
    <string name="share_subject">"Sharing of GPS data of the travel entitled "</string>
    <string name="gps_point_in_menu">GPS point (in blue)</string>
    <string name="photo_gps_point_in_menu">Photo GPS point (in orange)</string>
    <string name="text_gps_point_in_menu">Text GPS point (in violet)</string>
    <string name="add_item_map_title">Add an item to the map:</string>
    <string name="alert_add_text_point_title">Add a text point</string>
    <string name="alert_add_text_point_message">Enter your text:</string>
    <string name="info_end_time_travel">"End time: "</string>
    <string name="alert_delete_travel">Delete this travel</string>
    <string name="alert_delete_travel_message">Are you sure you want to delete this trip?</string>
    <string name="settings_fragment_location">Location</string>
    <string name="settings_fragment_autogps">Activate automatic GPS point acquisition</string>
    <string name="fragment_settings_account">Account</string>
    <string name="settings_fragment_logout">Logout</string>
    <string name="settings_fragment_logout_summary">Click here to log out from your account</string>
    <string name="unable_to_sign_in_with_google_error_text">Unable to sign in with Google</string>
    <string name="successful_sign_in_with_google">Successfully signed in</string>
    <string name="error_getting_last_gps_point">Error trying to get last GPS location</string>
    <string name="unable_to_launch_camera_error_text">Unable to lauch camera</string>
    <string name="unable_to_create_travelogue_album">Unable to create travelogue album</string>
    <string name="delete_trip_modal_title">Delete this trip</string>
    <string name="delete_trip_modal_text">Are you sure you want to delete this trip?</string>
    <string name="bottom_sheet_point_no_image">The image is being uploaded or cannot be found.</string>
    <string name="from_date">"From "</string>
    <string name="to_date">"to "</string>
    <string name="welcome_activity_permissions_alert_title">Before going on</string>
    <string name="welcome_activity_permissions_alert_message">You must grant permissions to the application for the features described in this screen to work. You can then log in.</string>
    <string name="export_images_to_drive_action_title">Export travel GPS points and images to Drive</string>
    <string name="export_images_to_drive_modal_text">The GPS points of this journey and the pictures will be exported to your Drive.\nThere are two formats for GPS points: kml and gpx.\n \nAs data is exported asynchronously, this operation may take up to 5 minutes or longer due to Drive Performance.\nPlease wait a few minutes to see the results in your Travelogue drive folder.\nOur apologies for the inconvenience.\n\nPlease bear in mind that, if you have not given us permission to access your Drive and/or if your trip contains no picture, nothing will be exported.\nIn order to grant permission, you can log out and log back in. A screen will appear requesting permission.\n\nThe Travelogue team.</string>
    <string name="cannot_export_images_to_drive_error_text">We could not export the images of this trip to your Drive. \nPlease try again later!</string>
    <string name="export_to_drive_button">Export</string>
    <string name="alert_no_location_title">Localisation disabled</string>
    <string name="alert_no_location_message">Localisation is deactivated, you must activate it to take advantage of Travelogue\'s features.\nActivate it?</string>
    <string name="revoke_access_title">Revoke access to Google account</string>
    <string name="revoke_access_summary">Click here to revoke the access to your Google account.\nYou will be logged out.</string>
</resources>