<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/sign_up_activity_image_view"
        android:layout_width="wrap_content"
        android:layout_height="206dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/undraw_password_forgotten" />

    <TextView
        android:id="@+id/sign_up_activity_textview_1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_activity_textview_1"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/sign_up_activity_textview_2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_password_activity_textview_2" />

    <EditText
        android:id="@+id/forgot_password_activity_edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_text_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/forgot_password_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="onClickResetPassword"
        android:text="@string/forgot_password_btn" />

    <ProgressBar
        android:id="@+id/forgot_password_activity_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
